[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/textures/turret.png" type="Texture" id=1]
[ext_resource path="res://entities/enemies/Turret.gd" type="Script" id=2]
[ext_resource path="res://entities/enemies/TurretProjectile.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 304.467

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15.8439, 31.7328 )

[node name="Turret" type="Sprite"]
z_index = 1
texture = ExtResource( 1 )
script = ExtResource( 2 )
projectile_scene = ExtResource( 3 )

[node name="FireTimer" type="Timer" parent="."]

[node name="FirePosition" type="Position2D" parent="."]
position = Vector2( 0, -30.0339 )

[node name="DetectionArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea2D"]
visible = false
shape = SubResource( 1 )

[node name="TurretBodyArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TurretBodyArea2D"]
shape = SubResource( 2 )

[connection signal="body_entered" from="DetectionArea2D" to="." method="_on_DetectionArea2D_body_entered"]
[connection signal="body_exited" from="DetectionArea2D" to="." method="_on_DetectionArea2D_body_exited"]
